syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hypertrace.gateway.service.v1.log.events";

package org.hypertrace.gateway.service.v1.log.event;

import "org/hypertrace/gateway/service/v1/gateway_query.proto";

message LogEventsRequest {
  // todo change this to nano
  sfixed64 start_time_millis = 1;
  sfixed64 end_time_millis = 2;

  org.hypertrace.gateway.service.v1.common.Filter filter = 3;
  repeated org.hypertrace.gateway.service.v1.common.Expression selection = 4;
  repeated org.hypertrace.gateway.service.v1.common.OrderByExpression order_by = 5;
  int32 offset = 6;
  int32 limit = 7;
}

message LogEvent {
  map<string, org.hypertrace.gateway.service.v1.common.Value> attributes = 1;
}

message LogEventsResponse {
  repeated LogEvent log_events = 1;
}
