syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hypertrace.gateway.service.v1.trace";

package org.hypertrace.gateway.service.v1.trace;

import "org/hypertrace/gateway/service/v1/gateway_query.proto";

message TracesRequest {
  sfixed64 start_time_millis = 1;
  sfixed64 end_time_millis = 2;
  // accepts API_TRACE, BACKEND_TRACE and TRACE
  string scope = 8;
  // this is only applicable to the root span
  org.hypertrace.gateway.service.v1.common.Filter filter = 3;

  // To select which attributes to return
  repeated org.hypertrace.gateway.service.v1.common.Expression selection = 4;

  repeated org.hypertrace.gateway.service.v1.common.OrderByExpression orderBy = 5;

  int32 offset = 6;
  int32 limit = 7;
  string space_id = 9;
}

message TracesResponse {
  repeated Trace traces = 1;
  int32 total = 2;
}

message Trace {
  map<string, org.hypertrace.gateway.service.v1.common.Value> attributes = 1;
}


